-fix button misalign

--- a/style.css
+++ b/style.css
@@ -261,8 +261,12 @@ nav a{
     position: relative;
     bottom: 100px;
     width: 26.8rem;
+    height: 365px !important;
+    min-height: 365px !important;
+    max-height: 365px !important;
     text-align: center;
     display: flex;
+    justify-content: flex-start;
     align-items: center;
     flex-direction: column;
 
@@ -283,6 +287,7 @@ nav a{
     font-weight: bold;
     border-radius: 5px;
     text-decoration: none;
+    margin-top: auto;
 }
 
 .store{
